# sunshot-rs

./: .gitignore  README.md  package-lock.json  package.json
src/: App.css  App.tsx  KonvaPreview.tsx  PrimaryEditor.tsx  Properties.tsx  SourceSelector.module.scss  SourceSelector.tsx  TrackItem.tsx  Tracks.tsx  VideoProperties.tsx  ZoomProperties.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/context/EditorContext/: EditorContext.ts
src/theme/: index.ts
